# battleship

./: README.md
client/: .gitignore  pom.xml
client/desktop/: pom.xml
client/desktop/src/main/resources/: log4j2.xml
client/native/: App.js  app.json  package.json
client/native/components/: Communicator.js  Main.js
client/native/components/forms/: FormBoard.js  FormConnect.js
client/native/components/game/: Board.js  FieldState.js  FormBoard.js  Game.js  validateBoard.js
client/native/components/menu/: FormConnect.js  FormLobby.js
client/native/ios/: Podfile
client/native/ios/Battleship/: Info.plist
client/native/ios/Battleship.xcodeproj/: project.pbxproj
client/native/ios/Battleship.xcodeproj/xcshareddata/xcschemes/: Battleship.xcscheme
client/native/util/: FieldState.js
client/src/main/java/: module-info.java
client/src/main/java/battleship/client/: Application.java  Main.java
doc/src/: main.tex  references.bib
doc/src/img/src/: client-state.drawio
server/src/: CMakeLists.txt  CliArgsParser.cpp  CliArgsParser.hpp  I_ServerOps.hpp  Server.cpp  Server.hpp  main.cpp
server/src/game/: Board.cpp  Board.hpp  Client.cpp  Client.hpp  I_ClientOps.hpp  Room.cpp  Room.hpp  StateMachine.cpp  StateMachine.hpp
server/src/msgs/: Communicator.cpp  Communicator.hpp  Message.cpp  Message.hpp  Messages.cpp  Messages.hpp  MsgCommunicator.cpp  MsgCommunicator.hpp
server/src/ntwrk/: Socket.cpp  Socket.hpp  SocketAcceptor.cpp  SocketAcceptor.hpp
server/src/util/: Generator.cpp  Generator.hpp  Logger.cpp  Logger.hpp
(+51 files in other folders)
